MavenBuild.groovy edited online with Bitbucket